--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,7 @@
     "@arco-design/web-react": "2.60.2",
     "@visactor/vtable": "workspace:*",
     "@visactor/react-vtable": "workspace:*",
+    "@visactor/vue-vtable": "workspace:*",
     "@visactor/openinula-vtable": "workspace:*",
     "@visactor/vtable-editors": "workspace:*",
     "@visactor/vtable-export": "workspace:*",
@@ -27,7 +28,9 @@
     "react-router-dom": "6.9.0",
     "lodash": "4.17.21",
     "openinula": "~0.1.2-SNAPSHOT",
-    "@visactor/vutils": "~0.18.13"
+    "@visactor/vutils": "~0.18.13",
+    "vue": "^3.4.14",
+    "@vue/compiler-dom": "^3.5.0"
   },
   "devDependencies": {
     "@internal/eslint-config": "workspace:*",
