--- a/packages/vtable/package.json
+++ b/packages/vtable/package.json
@@ -52,9 +52,9 @@
   },
   "dependencies": {
     "@visactor/vtable-editors": "workspace:*",
-    "@visactor/vrender-core": "0.20.3-alpha.0",
-    "@visactor/vrender-kits": "0.20.3-alpha.0",
-    "@visactor/vrender-components": "0.20.3-alpha.0",
+    "@visactor/vrender-core": "0.20.6-beta.0",
+    "@visactor/vrender-kits": "0.20.6-beta.0",
+    "@visactor/vrender-components": "0.20.6-beta.0",
     "@visactor/vutils": "~0.18.14",
     "@visactor/vscale": "~0.18.1",
     "@visactor/vdataset": "~0.18.1",
