feat: add configuration and live demo for ArcoVue as Editor

--- a/docs/package.json
+++ b/docs/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@arco-design/web-react": "2.60.2",
+    "@arco-design/web-vue": "^2.11.0",
     "@visactor/vtable": "workspace:*",
     "@visactor/react-vtable": "workspace:*",
     "@visactor/vue-vtable": "workspace:*",
