--- a/packages/vtable-calendar/package.json
+++ b/packages/vtable-calendar/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@visactor/vtable-calendar",
   "version": "1.7.6",
-  "description": "The calendar util of VTable",
+  "description": "The calendar component of VTable",
   "author": {
     "name": "VisActor",
     "url": "https://VisActor.io/"
