feat: add the highlightMode in select range

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,6 @@
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
   },
-  "python.formatting.provider": "none"
+	"python.formatting.provider": "none",
+	"nuxt.isNuxtApp": false
 }
