chore: add vtable devDependencies in vtable-plugins

--- a/packages/vtable-plugins/package.json
+++ b/packages/vtable-plugins/package.json
@@ -40,6 +40,7 @@
     "@visactor/vtable": "workspace:*"
   },
   "devDependencies": {
+    "@visactor/vtable": "workspace:*",
     "@visactor/vchart": "1.12.12",
     "@internal/bundler": "workspace:*",
     "@internal/eslint-config": "workspace:*",
