fix: fix cell update event problem in CustomCellStylePlugin #2927

--- a/packages/vtable-plugins/package.json
+++ b/packages/vtable-plugins/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@visactor/vtable": "workspace:*",
+    "@visactor/vtable-editors": "workspace:*",
     "@visactor/vchart": "1.12.12",
     "@internal/bundler": "workspace:*",
     "@internal/eslint-config": "workspace:*",
