--- a/packages/openinula-vtable/package.json
+++ b/packages/openinula-vtable/package.json
@@ -51,7 +51,7 @@
     "@visactor/vutils": "~0.18.14"
   },
   "devDependencies": {
-    "@visactor/vchart": "1.12.12",
+    "@visactor/vchart": "1.13.1-alpha.2",
     "@internal/bundler": "workspace:*",
     "@internal/eslint-config": "workspace:*",
     "@internal/ts-config": "workspace:*",
