--- a/packages/vtable/package.json
+++ b/packages/vtable/package.json
@@ -64,7 +64,7 @@
   },
   "devDependencies": {
     "luxon": "*",
-    "@visactor/vchart": "1.12.12",
+    "@visactor/vchart": "1.13.1-alpha.2",
     "@internal/bundler": "workspace:*",
     "@internal/eslint-config": "workspace:*",
     "@internal/ts-config": "workspace:*",
