--- a/packages/vue-vtable/package.json
+++ b/packages/vue-vtable/package.json
@@ -55,7 +55,7 @@
   "devDependencies": {
     "@arco-design/web-vue": "^2.11.0",
     "cross-env": "^7.0.3",
-    "@visactor/vchart": "1.12.12",
+    "@visactor/vchart": "1.13.1-alpha.2",
     "@internal/bundler": "workspace:*",
     "@internal/eslint-config": "workspace:*",
     "@internal/ts-config": "workspace:*",
