--- a/packages/vtable-editors/package.json
+++ b/packages/vtable-editors/package.json
@@ -32,6 +32,7 @@
     "@internal/bundler": "workspace:*",
     "@internal/eslint-config": "workspace:*",
     "@internal/ts-config": "workspace:*",
+    "@visactor/vtable": "workspace:*",
     "@rushstack/eslint-patch": "~1.1.4",
     "eslint": "~8.18.0",
     "vite": "3.2.6",
