chore: update start server command

--- a/packages/vtable-plugins/package.json
+++ b/packages/vtable-plugins/package.json
@@ -23,7 +23,7 @@
     }
   },
   "scripts": {
-    "start": "vite ./demo",
+    "demo": "vite ./demo",
     "build": "bundle --clean"
   },
   "unpkg": "latest",
