--- a/packages/vtable/package.json
+++ b/packages/vtable/package.json
@@ -52,9 +52,9 @@
   },
   "dependencies": {
     "@visactor/vtable-editors": "workspace:*",
-    "@visactor/vrender-core": "0.22.7-alpha.9",
-    "@visactor/vrender-kits": "0.22.7-alpha.9",
-    "@visactor/vrender-components": "0.22.7-alpha.9",
+    "@visactor/vrender-core": "0.22.8",
+    "@visactor/vrender-kits": "0.22.8",
+    "@visactor/vrender-components": "0.22.8",
     "@visactor/vutils": "~0.19.1",
     "@visactor/vscale": "~0.18.1",
     "@visactor/vdataset": "~0.18.1",
