feat(gantt): Implement plugin manager and add full export feature

--- a/packages/vtable-plugins/package.json
+++ b/packages/vtable-plugins/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@visactor/vtable": "workspace:*",
     "@visactor/vtable-editors": "workspace:*",
+    "@visactor/vtable-gantt": "workspace:*",
     "@visactor/vchart": "1.13.3-alpha.2",
     "@internal/bundler": "workspace:*",
     "@internal/eslint-config": "workspace:*",
