--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -35,4 +35,4 @@ jobs:
           NODE_OPTIONS: "--max_old_space_size=4096"
         run: node common/scripts/install-run-rush.js build -t @visactor/vtable
       - name: Test
-        run: node common/scripts/install-run-rush.js test --only tag:package
+        run: node common/scripts/install-run-rush.js test --only tag:unit-test
