--- a/common/config/rush/.npmrc
+++ b/common/config/rush/.npmrc
@@ -19,11 +19,5 @@
 #   //registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}
 #
 
-# 全局镜像源
-registry=https://registry.npmmirror.com/
-# Electron 镜像路径（关键配置）
-electron_mirror=https://npmmirror.com/mirrors/electron/
-ELECTRON_CUSTOM_DIR={{ version }}
-# 其他镜像源
-always-auth=false
+registry=https://registry.npmjs.org/
 always-auth=false
