docs: 增加全逻辑填充柄demo（同wps功能一致）

--- a/packages/react-vtable/package.json
+++ b/packages/react-vtable/package.json
@@ -99,6 +99,9 @@
     "axios": "^1.4.0",
     "@types/react-is": "^17.0.3",
     "@arco-design/web-react": "2.60.2",
-    "@types/react-reconciler": "0.28.8"
+    "@types/react-reconciler": "0.28.8",
+    "@types/lodash": "4.14.182",
+    "lodash": "4.17.21",
+    "big.js": "6.2.2"
   }
 }
