chore: init vtable-sheet project

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,23 +1,31 @@
 {
-  "version": "0.1.0",
-  "configurations": [
-    {
-      "name": "generate documents",
-      "port": 9229,
-      "program": "${workspaceFolder}/docs/libs/template-parse/build.js",
-      "args": ["--env", "dev", "--watch"],
-      "request": "launch",
-      "skipFiles": ["<node_internals>/**"],
-      "type": "pwa-node"
-    },
-    {
-      "name": "unit test",
-      "type": "pwa-node",
-      "request": "launch",
-      "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "args": ["${file}"],
-      "console": "integratedTerminal",
-      "internalConsoleOptions": "neverOpen"
-    }
-  ]
+    "version": "0.1.0",
+    "configurations": [
+        {
+            "name": "generate documents",
+            "port": 9229,
+            "program": "${workspaceFolder}/docs/libs/template-parse/build.js",
+            "args": [
+                "--env",
+                "dev",
+                "--watch"
+            ],
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "pwa-node"
+        },
+        {
+            "name": "unit test",
+            "type": "pwa-node",
+            "request": "launch",
+            "program": "${workspaceFolder}/node_modules/.bin/jest",
+            "args": [
+                "${file}"
+            ],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen"
+        }
+    ]
 }
