--- a/packages/vtable-sheet/package.json
+++ b/packages/vtable-sheet/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@visactor/vtable": "workspace:*",
     "@visactor/vtable-editors": "workspace:*",
+    "@visactor/vtable-plugins": "workspace:*",
     "@visactor/vutils": "~0.19.1",
     "@visactor/vscale": "~0.18.1",
     "@visactor/vdataset": "~0.18.1",
