--- a/packages/vtable-sheet/tsconfig.eslint.json
+++ b/packages/vtable-sheet/tsconfig.eslint.json
@@ -14,7 +14,13 @@
       ],
       "@visactor/vtable/es/vrender": [
         "../vtable/src/vrender.ts"
-      ]
+      ],
+      "@visactor/vtable/es": [
+        "../vtable/src"
+      ],
+      "@visactor/vtable-plugins": [
+        "../vtable-plugins/src"
+      ],
     }
   },
   "include": ["src", "__tests__", "examples", "site-demo"],
