--- a/packages/vtable-plugins/package.json
+++ b/packages/vtable-plugins/package.json
@@ -34,7 +34,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@visactor/vutils": "~0.19.1"
+    "@visactor/vutils": "~0.19.1",
+    "lodash": "4.17.21",
+    "big.js": "6.2.2"
   },
   "peerDependencies": {
     "@visactor/vtable": "workspace:*"
@@ -86,6 +88,7 @@
     "form-data": "~4.0.0",
     "axios": "^1.4.0",
     "@types/react-is": "^17.0.3",
-    "rollup-plugin-node-resolve": "5.2.0"
+    "rollup-plugin-node-resolve": "5.2.0",
+    "@types/lodash": "4.14.182"
   }
 }
