--- a/.github/ISSUE_TEMPLATE/feaure_request.yml
+++ b/.github/ISSUE_TEMPLATE/feaure_request.yml
@@ -10,8 +10,8 @@ body:
 
         For usage questions, please use the following resources:
 
-        - Read the [docs](https://www.visactor.io/)
-        - Find in [examples](https://www.visactor.io//)
+        - Read the [docs](https://www.visactor.io/vtable)
+        - Find in [examples](https://www.visactor.io/vtable/example)
         - Look for / ask questions on [Stack Overflow](https://stackoverflow.com/questions/tagged/visactors)
 
         For non-technical support or general questions, you can email [xuanhun521@126.com](mailto:xuanhun521@126.com).
