--- a/packages/vtable-plugins/package.json
+++ b/packages/vtable-plugins/package.json
@@ -36,7 +36,8 @@
   "dependencies": {
     "@visactor/vutils": "~0.19.1",
     "lodash": "4.17.21",
-    "big.js": "6.2.2"
+    "big.js": "6.2.2",
+    "exceljs": "4.4.0"
   },
   "peerDependencies": {
     "@visactor/vtable": "workspace:*"
