refactor: vrender afterClearRect api

--- a/packages/openinula-vtable/package.json
+++ b/packages/openinula-vtable/package.json
@@ -51,7 +51,7 @@
     "@visactor/vutils": "~0.19.1"
   },
   "devDependencies": {
-    "@visactor/vchart": "2.0.0-alpha.1",
+    "@visactor/vchart": "2.0.1",
     "@internal/bundler": "workspace:*",
     "@internal/eslint-config": "workspace:*",
     "@internal/ts-config": "workspace:*",
