--- a/docs/package.json
+++ b/docs/package.json
@@ -21,7 +21,7 @@
     "@visactor/vtable-export": "workspace:*",
     "@visactor/vtable-search": "workspace:*",
     "buble": "^0.20.0",
-    "@visactor/vchart": "2.0.0-alpha.1",
+    "@visactor/vchart": "2.0.1",
     "markdown-it": "^13.0.0",
     "highlight.js": "^11.8.0",
     "axios": "^1.4.0",
