--- a/packages/vtable-export/package.json
+++ b/packages/vtable-export/package.json
@@ -42,7 +42,7 @@
     "exceljs": "4.4.0"
   },
   "devDependencies": {
-    "@visactor/vchart": "2.0.0-alpha.1",
+    "@visactor/vchart": "2.0.1",
     "@internal/bundler": "workspace:*",
     "@internal/eslint-config": "workspace:*",
     "@internal/ts-config": "workspace:*",
