--- a/.github/workflows/sync-main-to-develop.yml
+++ b/.github/workflows/sync-main-to-develop.yml
@@ -42,7 +42,7 @@ jobs:
         id: package-version
         uses: xile611/read-package-version-action@main
         with:
-          path: packages/vmind
+          path: packages/vtable
 
       - name: Create a new branch
         run: |
@@ -57,5 +57,5 @@ jobs:
           title: '[Auto Sync] Sync the code from branch main to branch develop after release ${{ steps.package-version.outputs.current_version }}'
           base: develop
           head: sync/main-${{ steps.package-version.outputs.current_version }}
-          reviewers: da730
+          reviewers: fangsmile
           body: 'Sync the code from branch main to branch develop after release ${{ steps.package-version.outputs.current_version }}'
