--- a/packages/vtable-plugins/package.json
+++ b/packages/vtable-plugins/package.json
@@ -37,7 +37,9 @@
     "@visactor/vutils": "~0.19.1",
     "lodash": "4.17.21",
     "big.js": "6.2.2",
-    "exceljs": "4.4.0"
+    "exceljs": "4.4.0",
+    "file-saver": "2.0.5",
+    "@types/file-saver": "2.0.7"
   },
   "peerDependencies": {
     "@visactor/vtable": "workspace:*"
