--- a/docs/package.json
+++ b/docs/package.json
@@ -20,6 +20,7 @@
     "@visactor/vtable-editors": "workspace:*",
     "@visactor/vtable-export": "workspace:*",
     "@visactor/vtable-search": "workspace:*",
+    "@visactor/vtable-sheet": "workspace:*",
     "buble": "^0.20.0",
     "@visactor/vchart": "2.0.2",
     "markdown-it": "^13.0.0",
