feat: update vrender dependencies to alpha version and optimize text measure

--- a/packages/vtable/package.json
+++ b/packages/vtable/package.json
@@ -52,10 +52,10 @@
   },
   "dependencies": {
     "@visactor/vtable-editors": "workspace:*",
-    "@visactor/vrender-core": "1.0.9",
-    "@visactor/vrender-kits": "1.0.9",
-    "@visactor/vrender-components": "1.0.9",
-    "@visactor/vrender-animate": "1.0.9",
+    "@visactor/vrender-core": "1.0.14-alpha.0",
+    "@visactor/vrender-kits": "1.0.14-alpha.0",
+    "@visactor/vrender-components": "1.0.14-alpha.0",
+    "@visactor/vrender-animate": "1.0.14-alpha.0",
     "@visactor/vutils": "~0.19.1",
     "@visactor/vscale": "~0.18.1",
     "@visactor/vdataset": "~0.18.1",
