--- a/packages/vtable-plugins/package.json
+++ b/packages/vtable-plugins/package.json
@@ -39,8 +39,7 @@
     "big.js": "6.2.2",
     "exceljs": "4.4.0",
     "file-saver": "2.0.5",
-    "@types/file-saver": "2.0.7",
-    "date-fns": "3.6.0"
+    "@types/file-saver": "2.0.7"
   },
   "peerDependencies": {
     "@visactor/vtable": "workspace:*"
