chore: vtable-sheet project prepare

--- a/tools/bugserver-trigger/package.json
+++ b/tools/bugserver-trigger/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@visactor/vtable": "workspace:*",
     "@visactor/vtable-gantt": "workspace:*",
+    "@visactor/vtable-sheet": "workspace:*",
     "@visactor/vtable-editors": "workspace:*"
   },
   "devDependencies": {
