--- a/tools/bugserver-trigger/tsconfig.json
+++ b/tools/bugserver-trigger/tsconfig.json
@@ -5,6 +5,7 @@
       "@visactor/vtable": ["../../packages/vtable/src"],
       "@visactor/vtable/es/vrender": ["../../packages/vtable/src/vrender.ts"],
       "@visactor/vtable-gantt": ["../../packages/vtable-gantt/src"],
+      "@visactor/vtable-plugins": ["../../packages/vtable-plugins/src"],
       "@visactor/vtable-sheet": ["../../packages/vtable-sheet/src"],
       "@visactor/vtable-editors": ["../../packages/vtable-editors/src"]
     },
@@ -30,6 +31,9 @@
     },
     {
       "path": "../../packages/vtable-gantt"
+    },
+    {
+      "path": "../../packages/vtable-plugins"
     },
     {
       "path": "../../packages/vtable-sheet"
