fix: 解决打包时内存溢出的问题

--- a/packages/vtable-editors/package.json
+++ b/packages/vtable-editors/package.json
@@ -21,14 +21,17 @@
   "scripts": {
     "compile": "tsc --noEmit",
     "eslint": "eslint --debug --fix src/",
-    "build": "bundle",
+    "build": "npm run fix-memory-limit && bundle",
     "dev": "bundle --clean -f es -w",
     "test-cov": "jest -w 16 --coverage",
     "test-live": "npm run test-watch __tests__/unit/",
-    "test-watch": "DEBUG_MODE=1 jest --watch"
+    "test-watch": "DEBUG_MODE=1 jest --watch",
+    "fix-memory-limit": "cross-env LIMIT=10240 increase-memory-limit"
   },
   "dependencies": {},
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "increase-memory-limit": "^1.0.7",
     "@internal/bundler": "workspace:*",
     "@internal/eslint-config": "workspace:*",
     "@internal/ts-config": "workspace:*",
