--- a/packages/vtable-search/package.json
+++ b/packages/vtable-search/package.json
@@ -24,7 +24,8 @@
   },
   "scripts": {
     "start": "vite ./demo",
-    "build": "bundle --clean"
+    "build": "npm run fix-memory-limit && bundle --clean",
+    "fix-memory-limit": "cross-env LIMIT=10240 increase-memory-limit"
   },
   "unpkg": "latest",
   "unpkgFiles": [
@@ -38,6 +39,8 @@
     "@visactor/vutils": "~0.19.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "increase-memory-limit": "^1.0.7",
     "@visactor/vchart": "2.0.2",
     "@internal/bundler": "workspace:*",
     "@internal/eslint-config": "workspace:*",
