chore: bugserver add plugins

--- a/packages/vtable-plugins/package.json
+++ b/packages/vtable-plugins/package.json
@@ -28,7 +28,7 @@
   },
   "unpkg": "latest",
   "unpkgFiles": [
-    "dist/vtable-exporter.js"
+    "dist/vtable-plugins.js"
   ],
   "publishConfig": {
     "access": "public"
