--- a/tools/bugserver-trigger/tsconfig.json
+++ b/tools/bugserver-trigger/tsconfig.json
@@ -5,7 +5,8 @@
       "@visactor/vtable": ["../../packages/vtable/src"],
       "@visactor/vtable/es/vrender": ["../../packages/vtable/src/vrender.ts"],
       "@visactor/vtable-gantt": ["../../packages/vtable-gantt/src"],
-      "@visactor/vtable-editors": ["../../packages/vtable-editors/src"]
+      "@visactor/vtable-editors": ["../../packages/vtable-editors/src"],
+      "@visactor/vtable-plugins": ["../../packages/vtable-plugins/src"]
     },
     "target": "ES2016",
     "useDefineForClassFields": true,
@@ -28,9 +29,11 @@
       "path": "../../packages/vtable-editors"
     },
     {
+      "path": "../../packages/vtable-plugins"
+    },
+    {
       "path": "../../packages/vtable-gantt"
     },
-
     {
       "path": "../../packages/vtable"
     }
