chore: vtable-plugin bugServer setting

--- a/tools/bugserver-trigger/package.json
+++ b/tools/bugserver-trigger/package.json
@@ -11,7 +11,8 @@
     "@visactor/vtable": "workspace:*",
     "@visactor/vtable-gantt": "workspace:*",
     "@visactor/vtable-editors": "workspace:*",
-    "@visactor/vtable-plugins": "workspace:*"
+    "@visactor/vtable-plugins": "workspace:*",
+    "@visactor/vtable-sheet": "workspace:*"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "~1.1.4",
