--- a/tools/bugserver-trigger/tsconfig.json
+++ b/tools/bugserver-trigger/tsconfig.json
@@ -6,7 +6,8 @@
       "@visactor/vtable/es/vrender": ["../../packages/vtable/src/vrender.ts"],
       "@visactor/vtable-gantt": ["../../packages/vtable-gantt/src"],
       "@visactor/vtable-editors": ["../../packages/vtable-editors/src"],
-      "@visactor/vtable-plugins": ["../../packages/vtable-plugins/src"]
+      "@visactor/vtable-plugins": ["../../packages/vtable-plugins/src"],
+      "@visactor/vtable-sheet": ["../../packages/vtable-sheet/src"]
     },
     "target": "ES2016",
     "useDefineForClassFields": true,
@@ -33,6 +34,9 @@
     },
     {
       "path": "../../packages/vtable-gantt"
+    },
+    {
+      "path": "../../packages/vtable-sheet"
     },
     {
       "path": "../../packages/vtable"
