--- a/packages/vtable-plugins/package.json
+++ b/packages/vtable-plugins/package.json
@@ -20,6 +20,10 @@
     ".": {
       "require": "./cjs/index.js",
       "import": "./es/index.js"
+    },
+    "./gantt-extensions": {
+      "require": "./cjs/gantt-export-image.js",
+      "import": "./es/gantt-export-image.js"
     }
   },
   "scripts": {
