--- a/packages/vtable-sheet/package.json
+++ b/packages/vtable-sheet/package.json
@@ -56,8 +56,7 @@
     "@visactor/vutils": "~0.19.1",
     "@visactor/vscale": "~0.18.1",
     "@visactor/vdataset": "~0.18.1",
-    "cssfontparser": "^1.2.1",
-    "hyperformula": "^3.0.0"
+    "cssfontparser": "^1.2.1"
   },
   "devDependencies": {
     "luxon": "*",
