--- a/packages/vtable-plugins/package.json
+++ b/packages/vtable-plugins/package.json
@@ -28,6 +28,7 @@
   },
   "scripts": {
     "demo": "vite ./demo",
+    "compile": "tsc --noEmit",
     "build": "npm run fix-memory-limit && bundle --clean",
     "fix-memory-limit": "cross-env LIMIT=10240 increase-memory-limit"
   },
