refactor: requestAnimationFrame use vrender api #4619

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,15 @@
             ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen"
+        },
+        {
+            "name": "node run table",
+            "type": "pwa-node",
+            "request": "launch",
+            "program": "${workspaceFolder}/packages/vtable/nodejs/index.js",
+            "args": [
+                
+            ],
         }
     ]
 }
