--- a/packages/vtable/package.json
+++ b/packages/vtable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@visactor/vtable",
-  "version": "1.22.0",
+  "version": "1.22.1",
   "description": "canvas table width high performance",
   "keywords": [
     "grid",
@@ -53,10 +53,10 @@
   },
   "dependencies": {
     "@visactor/vtable-editors": "workspace:*",
-    "@visactor/vrender-core": "1.0.21",
-    "@visactor/vrender-kits": "1.0.21",
-    "@visactor/vrender-components": "1.0.21",
-    "@visactor/vrender-animate": "1.0.21",
+    "@visactor/vrender-core": "~1.0.21",
+    "@visactor/vrender-kits": "~1.0.21",
+    "@visactor/vrender-components": "~1.0.21",
+    "@visactor/vrender-animate": "~1.0.21",
     "@visactor/vutils": "~0.19.1",
     "@visactor/vscale": "~0.18.1",
     "@visactor/vdataset": "~0.18.1",
