--- a/packages/react-vtable/package.json
+++ b/packages/react-vtable/package.json
@@ -58,7 +58,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "increase-memory-limit": "^1.0.7",
-    "@visactor/vchart": "2.0.2",
+    "@visactor/vchart": "2.0.8-alpha.5",
     "@internal/bundler": "workspace:*",
     "@internal/eslint-config": "workspace:*",
     "@internal/ts-config": "workspace:*",
