--- a/packages/vtable/package.json
+++ b/packages/vtable/package.json
@@ -53,10 +53,10 @@
   },
   "dependencies": {
     "@visactor/vtable-editors": "workspace:*",
-    "@visactor/vrender-core": "~1.0.21",
-    "@visactor/vrender-kits": "~1.0.21",
-    "@visactor/vrender-components": "~1.0.21",
-    "@visactor/vrender-animate": "~1.0.21",
+    "@visactor/vrender-core": "1.0.25-alpha.1",
+    "@visactor/vrender-kits": "1.0.25-alpha.1",
+    "@visactor/vrender-components": "1.0.25-alpha.1",
+    "@visactor/vrender-animate": "1.0.25-alpha.1",
     "@visactor/vutils": "~0.19.1",
     "@visactor/vscale": "~0.18.1",
     "@visactor/vdataset": "~0.18.1",
