--- a/common/autoinstallers/lint/package.json
+++ b/common/autoinstallers/lint/package.json
@@ -18,5 +18,6 @@
     "@types/minimist": "1.2.2",
     "@types/node": "*",
     "typescript": "5.0.2"
-  }
+  },
+  "packageManager": "pnpm@10.23.0+sha512.21c4e5698002ade97e4efe8b8b4a89a8de3c85a37919f957e7a0f30f38fbc5bbdd05980ffe29179b2fb6e6e691242e098d945d1601772cad0fef5fb6411e2a4b"
 }
