--- a/packages/vtable-mcp/package.json
+++ b/packages/vtable-mcp/package.json
@@ -27,6 +27,8 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@internal/eslint-config": "workspace:*",
+    "@rushstack/eslint-patch": "~1.1.4",
     "typescript": "4.9.5"
   },
   "packageManager": "pnpm@10.23.0+sha512.21c4e5698002ade97e4efe8b8b4a89a8de3c85a37919f957e7a0f30f38fbc5bbdd05980ffe29179b2fb6e6e691242e098d945d1601772cad0fef5fb6411e2a4b"
